Fixed Scrollbar functionality

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,24 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* Scrollbar for everything */
+*::-webkit-scrollbar {
+    width: 6px;
+}
+
+*::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
 
 body {
     font-family: Arial, sans-serif;
